--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
 
   <!-- Adsterra Banner Code -->
   <div class="ad-container">
-    <!-- Replace this script with your actual Adsterra 160x600 code -->
     <script type="text/javascript">
       atOptions = {
         'key' : 'your_adsterra_key_here',
@@ -151,5 +150,9 @@
       }, 20000); // 20 seconds
     }
   </script>
+
+  <!-- Popunder Ad Script -->
+  <script type='text/javascript' src='//pl26632463.profitableratecpm.com/0b/f7/29/0bf729add6975a1c087c7976d8c3a308.js'></script>
+
 </body>
 </html>
