--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     @media (max-width: 768px) {
       .ad-container {
-        display: none; /* Hide ad on small screens */
+        display: none;
       }
     }
   </style>
@@ -100,7 +100,21 @@
   <div class="container">
     <h1>Hot Bollywood Divas PDF – Only ₹10</h1>
     <p>Download a premium PDF featuring a sizzling collection of high-quality images of top Bollywood actresses. Just ₹10 to unlock instantly.</p>
-    
+
+    <!-- Adsterra 300x250 iframe Ad -->
+    <div style="margin: 30px auto;">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : 'e0ddaad17c27e0caeed8c3957ed1ec85',
+          'format' : 'iframe',
+          'height' : 250,
+          'width' : 300,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/e0ddaad17c27e0caeed8c3957ed1ec85/invoke.js"></script>
+    </div>
+
     <div class="buttons">
       <button class="pay-btn" onclick="redirectToUPI()">Pay with PhonePe / Google Pay / Paytm</button>
     </div>
@@ -121,7 +135,7 @@
     </div>
   </div>
 
-  <!-- Adsterra Banner Code -->
+  <!-- Side Banner Ad -->
   <div class="ad-container">
     <script type="text/javascript">
       atOptions = {
@@ -151,8 +165,9 @@
     }
   </script>
 
-  <!-- Popunder Ad Script -->
-  <script type='text/javascript' src='//pl26632463.profitableratecpm.com/0b/f7/29/0bf729add6975a1c087c7976d8c3a308.js'></script>
+  <!-- Optional Popunder Ad Script -->
+  <!-- Uncomment below if you want popunder ads too -->
+  <!-- <script type='text/javascript' src='//pl26632463.profitableratecpm.com/0b/f7/29/0bf729add6975a1c087c7976d8c3a308.js'></script> -->
 
 </body>
 </html>
